package cn.bianwenkai.vo;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

/**
 * @author BianWenKai
 * @DATE 2022/5/14 - 16:02
 **/

@Data
@NoArgsConstructor
@AllArgsConstructor
public class SearchData {

    private Integer start;
    private Integer end;

}
