package cn.utils;

import lombok.Data;

/**
 * @author BianWenKai
 * @DATE 2022/5/11 - 11:44
 **/

@Data
public class HistogramData {

    private String local;
    private String type;
    private Float value;

}
